Membuat Header dan Footer

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     
+    <header>Ini adalah header</header>
+
     <div class="first">
         <h1>Belajar GIT Dasar</h1>
         <p>Ini baru permulaan</p>
     </div>
+
+    <footer>Ini adalah footer</footer>
 
 </body>
 </html>
